--- a/1-fundamentals/index.html
+++ b/1-fundamentals/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <canvas id="gpuCanvas" width="400" height="300"></canvas>
+  <canvas></canvas>
   <script src="script.js" defer></script>
   <p>dupa</p>
 </body>
